tests/bug_detector_tests/BinaryOpObjectType1.js
var o;
if(Math.random()) o = null;
if(Math.random()) o = false;
if(Math.random()) o = 5432;
if(Math.random()) o = "asdf";
//if(Math.random()) o = {};

	"x" in o;
	"x" instanceof o;
